# Aria-Bridge

./: .gitignore  README.md  aria_backend.spec  install.bat  pyproject.toml  start.bat
.github/workflows/: black.yml  release.yml
aria/: config.py
data/: index.csv
data/episodes/2026-04-16/20260416_233044_862c6f/: meta.json  output.mid  prompt.mid
data/episodes/2026-04-16/20260416_233323_e31954/: meta.json  output.mid  prompt.mid
data/episodes/2026-04-16/20260416_233901_d85aca/: meta.json  output.mid  prompt.mid
front-end/: generate-icon.js  main.js  package-lock.json  package.json  preload.js
front-end/renderer/: index.html  renderer.js  style.css
real-time/: README.md  ableton_bridge.py  requirements.txt
real-time/Plugin/: CMakeLists.txt  README.md
real-time/Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
real-time/ableton/: Aria Bridge.amxd
real-time/core/: aria_engine.py  bridge_engine.py  datastore.py  prompt_midi.py  sampling_state.py
real-time/modes/: manual_mode.py  osc_controller.py
