[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "0.0.1"
description = ""
authors = [{name = "Louis Bradshaw", email = "loua19@outlook.com"}]
requires-python = ">=3.11"

dependencies = [
    "ariautils @ git+https://github.com/EleutherAI/aria-utils.git",
    "safetensors>=0.4.0",
    "jsonlines",
    "tqdm",
    # IMPORTANT: torch is intentionally NOT pinned to a local wheel path.
    # Let users install the correct build (CPU/CUDA) via official PyTorch instructions.
    "torch>=2.3",
    "mlx; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
]

[project.optional-dependencies]
dev = ["black"]
train = ["accelerate"]

real-time = [
    "mido>=1.3.0",
    "python-rtmidi>=1.4.9",
    "python-osc>=1.8.0",
]

eval = [
    "transformers",
    "torchaudio>=2.3",
    "torchvision>=0.18",
    "mido>=1.3.0",
]

demo = ["python-rtmidi"]

all = [
    "black",
    "accelerate",
    "transformers",
    "torchaudio>=2.3",
    "torchvision>=0.18",
    "mido>=1.3.0",
    "python-rtmidi>=1.4.9",
]

[tool.black]
line-length = 80
target-version = ["py311"]
include = '\.pyi?$'

[project.scripts]
aria = "aria.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria", "aria.*"]

[tool.setuptools.package-data]
aria = ["../config/*.json", "../config/models/*.json"]